<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="@color/cardview_light_background"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/covid_title"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@color/cardview_light_background">
        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:padding="12dp">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/covid" />
        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"
            android:text="@string/please_make_sure_your_wi_fi_is_enabled" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reconnect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:text="@string/try_again" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>