<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
            android:id="@+id/main_toolbar_container"
            app:layout_constraintBottom_toTopOf="@id/graph_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:navigationIcon="@drawable/ic_back_24"
                app:navigationIconTint="@color/cardview_light_background"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/covid_title"
                android:contentDescription="@string/covid_title"
                app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:titleTextColor="@color/cardview_light_background">

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/graph_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/btm_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar_container"
            app:layout_constraintVertical_weight="5">

            <com.robinhood.spark.SparkView
                android:id="@+id/sparkview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:spark_lineColor="#4CAF50"
                app:spark_scrubEnabled="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/output_panel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/graph_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar_container"
            app:layout_constraintVertical_weight="5">

            <TextView
                android:id="@+id/scrub_info_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text=""
                android:textAppearance="?android:textAppearanceSmall"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btm_panel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_weight="4">

            <RadioGroup
                android:id="@+id/metricsRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonCases"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/cases" />

                <RadioButton
                    android:id="@+id/radioButtonAdmissions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/admissions" />


                <RadioButton
                    android:id="@+id/radioButtonDeaths"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/deaths" />

            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>